--- a/공부 내용 정리/01.md
+++ b/공부 내용 정리/01.md
@@ -246,3 +246,177 @@ header #secondary-menu {
 
 ![image-20210909200839194](01.assets/image-20210909200839194.png)
 
+
+
+  위 문제를 해결하기 위하여 참고한 사이트는 아래와 같다.
+
+https://www.daleseo.com/css-align-right/
+
+
+
+# 21.09.10 작업일지
+
+
+
+  먼저 어제 마저 진행하지 못한 내용은 아래와 같다.
+
+- 메뉴바 그라데이션 작업
+- 마우스 오버 시, 투명도 조절
+- 스프라이트를 이용한 이미지 적용
+
+
+
+  금일은 이에 대한 작업을 수행한다.
+
+
+
+## 마우스 오버 시, 투명도 조절
+
+  마우스 오버시 투명도를 조절하기 위하여 사용되는 것은 **마우스 오버 시의 효과**로 아래와 같이 구성하여,  사용 가능
+
+```javascript
+header #primary-menu li:hover {
+    opacity: 0.5;
+}
+```
+
+또한, 위에 적용한 링크는 **하이퍼링크**로 작동을 해야하기 때문에, 각각의 `li` 태그에  앵커를 이용하여 하이퍼 링크를 구성하였다. 변경된 코드는 아래와 같다.
+
+```html
+<ul id="primary-menu">
+            <li><a href="./index.html"> 홈 </a></li>
+            <li><a href="./home.html"> Tv 프로그램 </a></li>
+            <li><a href="./movie.html"> 영화 </a></li>
+            <li><a href="./recommand.html">NEW! 요즘 대새 컨텐츠</a></li>
+            <li><a href="favorit_content.html">내가 찜한 컨텐츠</a></li>
+        </ul>
+```
+
+ 다만, 위와 같이 변경 할 경우, 아래와 같이 앵커 태그의 기본 구성인 효과가 들어가게된다. 
+
+![image-20210910174453402](01.assets/image-20210910174453402.png)
+
+
+
+  따라서, 위와같은 효과를 제거하기 위하여 `init.css`에 아래와 같은 명령여를 기입하여 초기화를 수행한다.
+
+```css
+a:link { color: white; text-decoration: none;}
+a:visited { color: white; text-decoration: none;}
+a:hover { color: white; text-decoration: none;}
+```
+
+
+
+  위의 코드를 통하여, 아래와 같은 상태를 유지할 수 있다.
+
+![image-20210910174832930](01.assets/image-20210910174832930.png)
+
+
+
+## 메뉴바 그라데이션 작업
+
+
+
+  그라데이션 작업을 위하여 사용되는 css 속성은 `linear-gradient()` 로 이를 이용하여, 화면에 그라데이션을 적용 할 수 있다(참고:https://blog.naver.com/PostView.nhn?blogId=heartflow89&logNo=221208305473&redirect=Dlog&widgetTypeCall=true&directAccess=false)
+
+
+
+ 그라데이션의 방향으로 지정하기 위해서는 <u>끝 지점을 기준으로 `to` 카워드가 함께 사용</u>되며 **속성값**은 아래와 같다.
+
+|  속성값   |                 내용                  |
+| :-------: | :-----------------------------------: |
+|  to top   |     아래에서 위로 그라데이션 생성     |
+|  to left  |  오른쪽에서 왼쪽으로 그라데이션 생성  |
+| to right  |  왼쪽에서 오른쪽으로 그라데이션 생성  |
+| to bottom | 위에서 아래로 그라데이션 생성(기본값) |
+
+
+
+​    따라서 아래와 같이, 구성하여 사용이 가능하다. 
+
+```css
+background: linear-gradient( to bottom, blue, white )
+```
+
+ 추가적으로, 대각선은 아래와 같이 구성 할 수 있다.
+
+```css
+background: linear-gradient( to right bottom, blue, white 40%, red)
+```
+
+
+
+따라서, 아래와 같이 구성하여, netflix의 메뉴바를 구현 할 수 있다
+
+```css
+header{
+    padding: 0 60px;
+    height: 70px;
+    display: flex;
+    position: relative;
+    width: auto;
+    /*justify-content: space-between;*/
+    background: linear-gradient(rgba(20,20,20,0.5), rgba(0,0,0,0));
+}
+```
+
+![image-20210910182540226](01.assets/image-20210910182540226.png)
+
+  ## 스프라이트를 이용한 메뉴바 이미지 적용
+
+
+
+  처음에는 넷플릭스 상단에 있는 검색 이미지와 알람 이미지가 존재하는줄 알았으나, 실제 웹 페이지 소스를 보니 그렇지 않다는 것을 알게 되었다. 아마 이는 netflix에서 지정된 폰트에 의하여 출력되는 것으로 판단된다. 각각의 폰트 값은 아래와 같은 것으로 보인다.
+
+ 검색 창 : '\e636'
+
+ 알람 창: '\e663'
+
+  따라서, 동일한 구성을 위하여 크롬 탭의 `source` 탭을 이용하여 해당 폰트의 내용을 다운 받는다. 제공하는 폰트는 두 종류로 아래의 링크에서 다운 받을 수 있다.
+
+- **NetflixSans_W_Md.woff2** : https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Md.woff2
+- **NetflixSans_W_Rg.woff2** : https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff2
+
+
+
+  만약 기회가 된다면, 이를 서버에서 제공 할 수 있도록 구성해 볼 예정이다.ㅌ
+
+
+
+라고 생각했으나, 실제 icon을 출력하는 부분에서는 `nf-icon`이라는 이름의 폰트를 사용하는 것을 알게 되었으며, 해당 파일은 `eot`라는 확장자를 활용하는 파일인 것을 확인하였다.
+
+  이는 netflix에서 사용하는 normalize.css에서 제공하는 것으로 해당 폰트 패밀리의 설정 내용은 아래와 같다.
+
+```css
+@font-face {
+    font-family: nf-icon;
+    src: url(https://assets.nflxext.com/ffe/siteui/fonts/nf-icon-v1-93.eot);
+    src: url(https://assets.nflxext.com/ffe/siteui/fonts/nf-icon-v1-93.eot?#iefix) format('embedded-opentype'), url(https://assets.nflxext.com/ffe/siteui/fonts/nf-icon-v1-93.woff) format('woff'), url(https://assets.nflxext.com/ffe/siteui/fonts/nf-icon-v1-93.ttf) format('truetype'), url(https://assets.nflxext.com/ffe/siteui/fonts/nf-icon-v1-93.svg#nf-icon-v1-93) format('svg');
+    font-weight: 400;
+    font-style: normal
+}
+```
+
+
+
+  따라서 위의 코드를 css에 적용하고, 아래와 같이 구현하여 추가하여 사용이 가능하다.
+
+```css
+#search:before {
+    font-family: nf-icon;
+    font-size: 1.3em;
+    content: '\e636';
+}
+
+#alarm:before {
+    font-family: nf-icon;
+    font-size: 1.5em;
+    content: '\e663';
+}
+```
+
+  위의 코드를 통하여 구성한 화면은 아래와 같다.
+
+![image-20210910200110799](01.assets/image-20210910200110799.png)
+
